--- a/inventory-service/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/inventory-service/src/main/resources/application.properties
@@ -3,5 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/inventory_db?createTableIfNotE
 spring.datasource.username=root
 spring.datasource.password=Vamsi@243
 spring.jpa.hibernate.ddl-auto=update
-
-server.port = 8082
+server.port = 0
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
