--- a/order-service/order-service/src/main/resources/application.properties
+++ b/order-service/order-service/src/main/resources/application.properties
@@ -4,5 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/order_db?createTableIfNotExist
 spring.datasource.username=root
 spring.datasource.password=Vamsi@243
 spring.jpa.hibernate.ddl-auto=update
-
 server.port = 8081
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
