--- a/product-service/product-service/src/main/resources/application.properties
+++ b/product-service/product-service/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.password=Vamsi@243
 spring.jpa.hibernate.ddl-auto=update
 server.port=8080
 
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
