--- a/gateway-server/src/main/resources/application.yml
+++ b/gateway-server/src/main/resources/application.yml
@@ -30,7 +30,11 @@ spring:
           uri: lb://inventory-service
           predicates:
             - Path=/api/inventory/**
-
+  security:
+    oauth2:
+      resource-server:
+        jwt:
+          jwk-set-uri: http://localhost:8181/realms/microservice-realm/protocol/openid-connect/certs
 eureka:
   client:
     serviceUrl:
