--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -9,7 +9,15 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
+        show_sql: true
+        format_sql: true
+  profiles:
+    active: "dev"
+  config:
+    import: configserver:http://localhost:8071/
 
 server:
   port: 8080
@@ -21,9 +29,18 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
 
-user:
-  message: "VamsiPachipala"
+#user:
+#  message: "default-profile"
 
 
 build:
   version: "1.0.0"
+
+
+#
+#logging:
+#  level:
+#    org.hibernate: DEBUG
+#    org.hibernate.SQL: DEBUG
+#    org.hibernate.type: TRACE
+
