--- a/inventory-service/src/main/resources/application.yml
+++ b/inventory-service/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: inventory-service
   datasource:
-    url: dbc:mysql://localhost:3306/inventory_db?createTableIfNotExists=true
+    url: jdbc:mysql://localhost:3306/inventory_db?createTableIfNotExists=true
     username: root
     password: Vamsi@243
   jpa:
