--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -15,3 +15,21 @@ spring:
           timeout: 5
           clone-on-start: true
           force-pull: true
+
+encrypt:
+  key: "09876543ASDFGHJKL"
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+#  health:
+#    readiness-state:
+#      enabled: true
+#    liveness-state:
+#      enabled: true
+#  endpoint:
+#    health:
+#      probes:
+#        enabled: true
