--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-
 spring:
   application:
     name: user-service
@@ -15,9 +14,9 @@ spring:
         show_sql: true
         format_sql: true
   profiles:
-    active: "dev"
+    active: dev
   config:
-    import: configserver:http://localhost:8071/
+    import: "optional:configserver:http://localhost:8071/"
 
 server:
   port: 8080
@@ -28,19 +27,37 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
     register-with-eureka: true
     fetch-registry: true
-
-#user:
-#  message: "default-profile"
-
-
-build:
-  version: "1.0.0"
+  instance:
+    prefer-ip-address: true
 
 
-#
-#logging:
-#  level:
-#    org.hibernate: DEBUG
-#    org.hibernate.SQL: DEBUG
-#    org.hibernate.type: TRACE
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  health:
+    readiness-state:
+      enabled: true
+    liveness-state:
+      enabled: true
+  endpoint:
+    shutdown:
+      enabled: true
+    health:
+      probes:
+        enabled: true
+  info:
+    env:
+      enabled: true
+
+endpoints:
+  shutdown:
+    enabled: true
+
+info:
+  app:
+    name: "user-service"
+    description: "user-service microservice"
+    version: "1.0.0"
